Symmetry breaks the Puff hair sculpting tool (spherical falloff) #116188

Closed
opened 2023-12-14 14:20:36 +01:00 by Anže · 7 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 546.01

Blender Version
Broken: version: 4.0.2, branch: blender-v4.0-release, commit date: 2023-12-05 07:41, hash: 9be62e85b727
Worked: 3.6.7 LTS

Caused by 1b19f62917

Short description of error
When symmetry is enabled with the Puff brush curve sculpting tool it only works on the side that is mirrored but not at all on the source side.

Exact steps for others to reproduce the error

  1. Create an object with a curve hair object for the groom
  2. Go into Curve sculpt mode
  3. Spawn symmetric hairs
  4. Deform the hairs
  5. Use the Puff tool with symmetry enabled

puff_hair_symmetry_bug.blend

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 546.01 **Blender Version** Broken: version: 4.0.2, branch: blender-v4.0-release, commit date: 2023-12-05 07:41, hash: `9be62e85b727` Worked: 3.6.7 LTS Caused by 1b19f62917 **Short description of error** When symmetry is enabled with the Puff brush curve sculpting tool it only works on the side that is mirrored but not at all on the source side. <video src="/attachments/ce5fc346-473c-4341-90a8-ed2a9a7a1de2" title="puff_hair_symmetry_bug.mp4" controls></video> **Exact steps for others to reproduce the error** 1. Create an object with a curve hair object for the groom 2. Go into Curve sculpt mode 3. Spawn symmetric hairs 4. Deform the hairs 5. Use the Puff tool with symmetry enabled [puff_hair_symmetry_bug.blend](/attachments/6326308d-ccea-4934-8aae-1829d69e8ddb)
Anže added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2023-12-14 14:20:37 +01:00
Member

Will check

Will check
Member

Got a fix, will post shortly

Got a fix, will post shortly
Philipp Oeser self-assigned this 2023-12-15 11:57:43 +01:00
Member

Should actually be High Priority (since it is a recent regression)

Should actually be High Priority (since it is a recent regression)
Philipp Oeser added
Priority
High
and removed
Priority
Normal
labels 2023-12-15 12:30:36 +01:00
Member

Caused by 1b19f62917 btw.

Caused by 1b19f62917 btw.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-12-15 15:47:59 +01:00

Hi,
I still see this exact bug with Blender 4.1 Beta.

System Information
Operating system: Linux-5.4.0-171-generic-x86_64-with-glibc2.31 64 Bits, X11 UI
Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 535.154.05

Blender Version
Broken: version: 4.1.0 Beta, branch: blender-v4.1-release, commit date: 2024-02-07 12:34, hash: c1f55288e9cc

Hi, I still see this exact bug with Blender 4.1 Beta. **System Information** Operating system: Linux-5.4.0-171-generic-x86_64-with-glibc2.31 64 Bits, X11 UI Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 535.154.05 **Blender Version** Broken: version: 4.1.0 Beta, branch: blender-v4.1-release, commit date: 2024-02-07 12:34, hash: `c1f55288e9cc`
Member

Ah, seems the fix only did it for Projected Falloff, whereas indeed Sphere falloff is still wrong, will check on this again, thx poking1

Ah, seems the fix only did it for Projected Falloff, whereas indeed Sphere falloff is still wrong, will check on this again, thx poking1
Blender Bot added
Status
Confirmed
and removed
Status
Resolved
labels 2024-02-08 11:15:43 +01:00
Philipp Oeser changed title from Symmetry breaks the Puff hair sculpting tool to Symmetry breaks the Puff hair sculpting tool (spherical falloff) 2024-02-08 11:16:17 +01:00
Member

@Jens.Ne : PR is up , see !117987

@Jens.Ne : PR is up , see !117987
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-02-08 14:50:04 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#116188
No description provided.