Fix #116188: Symmetry breaks the Puff hair sculpting tool

Caused by 1b19f629175c .

Above commit didnt max the weight for each curve for each symmetry run
(so was just using the max it found for each run, overwriting the
previous run).

Pull Request: https://projects.blender.org/blender/blender/pulls/116221