source/blender/editors/sculpt_paint/curves_sculpt_puff.cc
@@ -213,7 +213,7 @@ struct PuffOperationExecutor {
             brush_, dist_to_brush_re, brush_radius_re);
         math::max_inplace(max_weight, radius_falloff);
       }
-      r_curve_weights[curve_i] = max_weight;
+      math::max_inplace(r_curve_weights[curve_i], max_weight);
     });
   }
 
